*******************************************************************************
2.0.20 alpha.3 release for ACL on Windows
*******************************************************************************

Mon Sep 23 11:12:43 1996  Kevin Layer  <layer@freezer>

	* fi-subproc.el: on windows pass environment in
	fi:subprocess-env-vars to lisp subprocess.

*******************************************************************************
2.0.20 alpha.2 release for ACL on Windows
*******************************************************************************

Tue Sep 17 11:00:41 1996    <layer@HOBART>

	* fi-site-init.el: incf version number

Thu Sep  5 16:15:57 1996  Kevin Layer  <layer@freezer>

	* fi-site-init.el: fix fi::load

Wed Sep 04 11:42:45 1996    <layer@HOBART>

	* fi-shell.el: make sure we run the correct shell on NT

	* fi-keys.el: make sure newline in shell mode (DOS) does the right
	  thing (for emacs 19.34)
	* fi-shell.el: filter (on windows) out ^M's
	* fi-subproc.el: fi:common-lisp-socket integrated into
	  fi:common-lisp.

Tue Sep 03 16:54:08 1996    <layer@HOBART>

	* fi-site-init.el: change the way eli is loaded, so that load-path
	  doesn't have to be changed.  (load "..../fi-site-init.el") is now
	  all that is needed.
	* fi-subproc.el: more misc fixes fi:common-lisp-socket.
	* make.bat: fix for varying emacs locations
	* makefile.win32: get emacs_dir from make.bat

Fri Aug 30 11:01:15 1996    <layer@HOBART>

	* clman.c: for Windows
	* clman.h: for Windows
	* fi-clman.el: for Windows
	* makefile.win32: the Windows makefile
	* make.bat: just call nmake on makefile.win32, default rule just
	  compiles el files

	* fi-subproc.el: finishing touches on getting it to work on
	  Windows.
	* make.bat for building .elc files.

Thu Aug 29 10:03:23 1996    <layer@HOBART>

	* fi-site-init.el: version -> 2.0.20 alpha 1
	* fi-subproc.el: first pass at full working interface on windows
	* fi-utils.el: preserve condition when open-network-stream fails
